--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           </div>
           <div class="card-body">
             <h2 class="pricing-text">$99<span class="my-0 fw-normal">/mo</span></h2>
-            <p>Pirority Listing</p>
+            <p>Priority Listing</p>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
