--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     rel="stylesheet">
 
 <body>
-  <section id="title">
+  <section class="colored-section" id="title">
     <!-- Nav Bar -->
     <div class="container-fluid">
       <nav class="navbar navbar-expand-md navbar-dark">
@@ -63,8 +63,7 @@
       </div>
   </section>
   <!-- Features -->
-  <section id="features">
-    <div class="container-fluid"></div>
+  <section class="white-section" id="features">
     <div class="row">
       <div class="feature-box col-lg-4">
         <i class="icon fa-solid fa-circle-check"></i>
@@ -83,9 +82,10 @@
       </div>
     </div>
   </div>
+  
   </section>
   <!-- Testimonials -->
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
 
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
@@ -111,14 +111,14 @@
   </section>
 
   <!-- Press -->
-  <section id="press">
+  <section class="colored-section" id="press">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
   </section>
   <!-- Pricing -->
-  <section id="pricing">
+  <section class="white-section" id="pricing">
     <h2 class="pricing-text">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
     <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
@@ -171,7 +171,7 @@
 
   </section>
   <!-- Call to Action -->
-  <section id="cta">
+  <section class="colored-section" id="cta">
     <div class="container-fluid">
     <h2 class="big-heading">Find the True Love of Your Dog's Life Today.</h2>
     <div class="cta-button">
@@ -183,7 +183,7 @@
     </div>
   </section>
   <!-- Footer -->
-  <footer id="footer">
+  <footer class="white-section" id="footer">
     <div class="container-fluid">
     <div class="social-icons">
     <a href="https://twitter.com/rnsrrn18" target="_blank"><i class="icons fa-brands fa-x-twitter fa-xl"></i></a>
